--- a/PackageEasy/PackageEasy/MainWindow.xaml
+++ b/PackageEasy/PackageEasy/MainWindow.xaml
@@ -22,6 +22,7 @@
     </WindowChrome.WindowChrome>
     <Window.InputBindings>
         <KeyBinding Modifiers="Control" Key="S" Command="{Binding SaveCommand}" />
+        <KeyBinding Modifiers="Control" Key="O" Command="{Binding OpenFileCommand}" />
     </Window.InputBindings>
     <i:Interaction.Triggers>
         <i:EventTrigger EventName="Loaded">
