--- a/PackageEasy/PackageEasy/Views/BaseInfoView.xaml
+++ b/PackageEasy/PackageEasy/Views/BaseInfoView.xaml
@@ -36,8 +36,8 @@
         <TextBlock Grid.Row="1" Text="应用程序版本:" lang:LanguageManager.LangText="应用程序版本:" VerticalAlignment="Center"  HorizontalAlignment="Right"></TextBlock>
         <TextBox   Grid.Row="1" Grid.Column="1" HorizontalAlignment="Left" Style="{StaticResource CommonTextBox}" Text="{Binding ApplicationVersion,Mode=TwoWay,UpdateSourceTrigger=PropertyChanged}"  Width="150" Height="25" VerticalContentAlignment="Center" Margin="5,10,0,10"></TextBox>
 
-        <TextBlock  Grid.Row="2" Text="应用程序出版人:" lang:LanguageManager.LangText="应用程序出版人:" VerticalAlignment="Center"  HorizontalAlignment="Right"></TextBlock>
-        <TextBox   Grid.Row="2" Grid.Column="1" HorizontalAlignment="Left" Style="{StaticResource CommonTextBox}" Text="{Binding ApplicationPublisher,Mode=TwoWay,UpdateSourceTrigger=PropertyChanged}"  Width="150" Height="25" VerticalContentAlignment="Center" Margin="5,10,0,10"></TextBox>
+        <TextBlock  Grid.Row="2" Text="公司名称:" lang:LanguageManager.LangText="公司名称:" VerticalAlignment="Center"  HorizontalAlignment="Right"></TextBlock>
+        <TextBox   Grid.Row="2" Grid.Column="1" HorizontalAlignment="Left" Style="{StaticResource CommonTextBox}" Text="{Binding CompanyName,Mode=TwoWay,UpdateSourceTrigger=PropertyChanged}"  Width="150" Height="25" VerticalContentAlignment="Center" Margin="5,10,0,10"></TextBox>
 
         <TextBlock Grid.Row="3" Text="应用程序网站:" lang:LanguageManager.LangText="应用程序网站:" VerticalAlignment="Center"  HorizontalAlignment="Right"></TextBlock>
         <TextBox Grid.Row="3" Grid.Column="1" HorizontalAlignment="Left" Style="{StaticResource CommonTextBox}" Width="220"  Text="{Binding ApplicationUrl,Mode=TwoWay,UpdateSourceTrigger=PropertyChanged}"  Height="25" VerticalContentAlignment="Center" Margin="5,10,0,10"></TextBox>
@@ -59,10 +59,14 @@
 
         <TextBlock Grid.Row="7" Text="压缩算法:" lang:LanguageManager.LangText="压缩算法:" VerticalAlignment="Center"  HorizontalAlignment="Right"></TextBlock>
         <ComboBox Grid.Row="7" Grid.Column="1"  HorizontalAlignment="Left" ItemsSource="{Binding CompressAlgoList}" SelectedItem="{Binding ComPressAlgo,Mode=TwoWay,UpdateSourceTrigger=PropertyChanged}"  DisplayMemberPath="DisplayName" Width="220" Style="{StaticResource  CommonComboBoxStyle}" Height="25" VerticalContentAlignment="Center" Margin="5,10,0,10"></ComboBox>
+        <TextBlock Grid.Row="8" Text="应用程序出版人:" lang:LanguageManager.LangText="应用程序出版人:" VerticalAlignment="Center"  HorizontalAlignment="Right"></TextBlock>
+        <StackPanel Orientation="Horizontal" Grid.Row="8" Grid.Column="1">
+            <TextBox Grid.Row="4" Grid.Column="1" HorizontalAlignment="Left" Text="{Binding ApplicationPublisher,Mode=TwoWay,UpdateSourceTrigger=PropertyChanged}" Style="{StaticResource CommonTextBox}" Width="150" Height="25" VerticalContentAlignment="Center" Margin="5,10,0,10"></TextBox>
+            <!--<Button Width="50" Height="25" Content="..." Style="{StaticResource CommonButtonStyle}" Command="{Binding SelectOutPutCommand}" Margin="5,0,0,0"></Button>-->
+        </StackPanel>
 
-
-        <TextBlock Grid.Row="9" VerticalAlignment="Top" Text="语言选择:" lang:LanguageManager.LangText="语言选择:" Margin="0,8,0,0"  HorizontalAlignment="Right"></TextBlock>
-        <ItemsControl Grid.Row="9" Height="AUTO" Grid.Column="1" VerticalAlignment="Top"  Margin="5,8,0,0" ItemsSource="{Binding InstallList}">
+        <TextBlock Grid.Row="10" VerticalAlignment="Top" Text="语言选择:" lang:LanguageManager.LangText="语言选择:" Margin="0,8,0,0"  HorizontalAlignment="Right"></TextBlock>
+        <ItemsControl Grid.Row="10" Height="AUTO" Grid.Column="1" VerticalAlignment="Top"  Margin="5,8,0,0" ItemsSource="{Binding InstallList}">
             <ItemsControl.ItemsPanel>
                 <ItemsPanelTemplate>
                     <WrapPanel></WrapPanel>
@@ -74,8 +78,8 @@
                 </DataTemplate>
             </ItemsControl.ItemTemplate>
         </ItemsControl>
-        <TextBlock Grid.Row="8" Text="语言文件设置:" lang:LanguageManager.LangText="语言文件设置:" VerticalAlignment="Center"  HorizontalAlignment="Right"></TextBlock>
-        <StackPanel Orientation="Horizontal" Grid.Row="8" Grid.Column="1">
+        <TextBlock Grid.Row="9" Text="语言文件设置:" lang:LanguageManager.LangText="语言文件设置:" VerticalAlignment="Center"  HorizontalAlignment="Right"></TextBlock>
+        <StackPanel Orientation="Horizontal" Grid.Row="9" Grid.Column="1">
             <TextBox Grid.Row="4" Grid.Column="1" HorizontalAlignment="Left" Text="{Binding LanguagePath,Mode=TwoWay,UpdateSourceTrigger=PropertyChanged}" Style="{StaticResource CommonTextBox}" Width="150" Height="25" VerticalContentAlignment="Center" Margin="5,10,0,10"></TextBox>
             <Button Width="50" Height="25" Content="..." Style="{StaticResource CommonButtonStyle}" Command="{Binding SelectLanguageCommand}" CommandParameter="1" Margin="5,0,0,0"></Button>
         </StackPanel>
@@ -120,5 +124,7 @@
             <TextBox Grid.Row="1" Grid.Column="1" HorizontalAlignment="Left" Text="{Binding WorkSpace,Mode=TwoWay,UpdateSourceTrigger=PropertyChanged}" VerticalContentAlignment="Top" VerticalAlignment="Top" Style="{StaticResource CommonTextBox}" Width="150" MinHeight="25" TextWrapping="WrapWithOverflow"  Margin="5,10,0,10"></TextBox>
             <Button Width="50" Height="25" Content="..." VerticalAlignment="Top" Command="{Binding SelectWorkSpaceCommand}" Style="{StaticResource CommonButtonStyle}" Margin="5,10,0,0"></Button>
         </StackPanel>
+
+       
     </Grid>
 </UserControl>
