--- a/PackageEasy/PackageEasy/Views/Dialogs/MessageBox.xaml
+++ b/PackageEasy/PackageEasy/Views/Dialogs/MessageBox.xaml
@@ -49,7 +49,8 @@
             <TextBlock Text="" FontSize="16" Grid.Row="1" HorizontalAlignment="Center" TextWrapping="WrapWithOverflow" Margin="5,0,5,0" VerticalAlignment="Center" x:Name="msg"></TextBlock>
             <StackPanel Orientation="Horizontal" Grid.Row="3" HorizontalAlignment="Center" Margin="0,20,0,20">
                 <Button Style="{StaticResource CommonButtonStyle}" Visibility="Collapsed" x:Name="ok" Content="确定" lang:LanguageManager.LangText="确定" Click="ok_Click" Width="76" Height="36"></Button>
-                <Button Style="{StaticResource CommonButtonStyle}" Visibility="Collapsed" Content="关闭"  lang:LanguageManager.LangText="关闭" Click="ImageButton_Click" x:Name="cancel" Width="76" Margin="8,0,0,0" Height="36"></Button>
+                <Button Content="否" lang:LanguageManager.LangText="否" Visibility="Collapsed" Style="{StaticResource CommonButtonStyle}" x:Name="no" Margin="15,0,0,0" Width="76" Click="no_Click" Height="36" ></Button>
+                <Button Style="{StaticResource CommonButtonStyle}" Visibility="Collapsed" Content="关闭"  lang:LanguageManager.LangText="关闭" Click="ImageButton_Click" x:Name="cancel" Width="76" Margin="15,0,0,0" Height="36"></Button>
             </StackPanel>
         </Grid>
     </Border>
