--- a/PackageEasy/PackageEasy/Themes/DefaultColor.xaml
+++ b/PackageEasy/PackageEasy/Themes/DefaultColor.xaml
@@ -57,4 +57,6 @@
     <SolidColorBrush x:Key="showWindowsBottonBackground" Color="#F0F0F0"></SolidColorBrush>
     <!--SettingControl-->
     <SolidColorBrush x:Key="settingControlBottonBackground" Color="#5D6B99"></SolidColorBrush>
+    <!--插件鼠标移上颜色-->
+    <SolidColorBrush x:Key="pluginMouseOverBackground" Color="#E6E7EF" ></SolidColorBrush>
 </ResourceDictionary>
