--- a/PackageEasy/PackageEasy/Styles/ProcessStyle.xaml
+++ b/PackageEasy/PackageEasy/Styles/ProcessStyle.xaml
@@ -358,12 +358,12 @@
     </Style>
     <Style x:Key="WanderingCubesProgressRingStyle" TargetType="controls:TProgressRing">
         <Setter Property="Background" Value="Transparent" />
-        <Setter Property="Foreground" Value="{DynamicResource Accent}" />
+        <Setter Property="Foreground" Value="{DynamicResource selecetRadioIsCheckedForeground}" />
         <Setter Property="IsHitTestVisible" Value="False" />
         <Setter Property="HorizontalAlignment" Value="Center" />
         <Setter Property="VerticalAlignment" Value="Center" />
-        <Setter Property="Height" Value="80" />
-        <Setter Property="Width" Value="80" />
+        <Setter Property="Height" Value="150" />
+        <Setter Property="Width" Value="150" />
         <Setter Property="IsTabStop" Value="False" />
         <Setter Property="Template">
             <Setter.Value>
@@ -458,17 +458,19 @@
                             </VisualStateGroup>
                         </VisualStateManager.VisualStateGroups>
                         <Grid x:Name="Ring"
+                            Width="{TemplateBinding Width}"
+                            Height="{TemplateBinding Height}"
                             Margin="{TemplateBinding Padding}"
                             Visibility="Collapsed">
                             <Grid.ColumnDefinitions>
-                                <ColumnDefinition Width="2*"/>
-                                <ColumnDefinition Width="4*"/>
-                                <ColumnDefinition Width="2*"/>
+                                <ColumnDefinition Width="5*"/>
+                                <ColumnDefinition Width="3*"/>
+                                <ColumnDefinition Width="5*"/>
                             </Grid.ColumnDefinitions>
                             <Grid.RowDefinitions>
-                                <RowDefinition Height="2*"/>
-                                <RowDefinition Height="4*"/>
-                                <RowDefinition Height="2*"/>
+                                <RowDefinition Height="5*"/>
+                                <RowDefinition Height="3*"/>
+                                <RowDefinition Height="5*"/>
                             </Grid.RowDefinitions>
 
                             <Rectangle x:Name="ProgressElement1" Fill="{TemplateBinding Foreground}" Grid.Column="0" Grid.Row="0" RenderTransformOrigin="0.5,0.5">
