--- a/PackageEasy/PackageEasy/Views/Tools/SettingControl.xaml
+++ b/PackageEasy/PackageEasy/Views/Tools/SettingControl.xaml
@@ -16,7 +16,8 @@
 
         <Border BorderBrush="LightGray" BorderThickness="0,0,1,0">
             <StackPanel Orientation="Vertical" Margin="0,5,-1,0">
-                <RadioButton Style="{StaticResource SettingTableStyle }" IsChecked="True" x:Name="nsis" Content="NSIS设置" lang:LanguageManager.LangText="设置" Height="30"  VerticalContentAlignment="Center" HorizontalContentAlignment="Center"></RadioButton>
+                <RadioButton Style="{StaticResource SettingTableStyle }" IsChecked="True" x:Name="nsis" Content="NSIS设置" lang:LanguageManager.LangText="NSIS设置" Height="30"  VerticalContentAlignment="Center" HorizontalContentAlignment="Center"></RadioButton>
+                <RadioButton Style="{StaticResource SettingTableStyle }"  x:Name="theme" Content="显示设置" lang:LanguageManager.LangText="显示设置" Height="30"  VerticalContentAlignment="Center" HorizontalContentAlignment="Center"></RadioButton>
             </StackPanel>
         </Border>
         <StackPanel Grid.Column="1" Margin="10,10,0,0" Visibility="{Binding IsChecked,ElementName=nsis,Converter={StaticResource BoolToVisibilityConverter}}">
@@ -29,6 +30,14 @@
                 <TextBlock Text="帮助文档:" lang:LanguageManager.LangText="帮助文档:" VerticalAlignment="Center"></TextBlock>
                 <TextBox Style="{StaticResource CommonTextBox}" Text="{Binding NSISHelperPath,Mode=TwoWay,UpdateSourceTrigger=PropertyChanged}" IsReadOnly="True" MinWidth="120" Margin="5,0,0,0"></TextBox>
                 <Button Width="30" Height="25" Style="{StaticResource CommonButtonStyle}" Content="..." Margin="5,0,0,0"></Button>
+            </StackPanel>
+        </StackPanel>
+        <StackPanel Grid.Column="1" Margin="10,10,0,0" d:Visibility="Visible" Visibility="{Binding IsChecked,ElementName=theme,Converter={StaticResource BoolToVisibilityConverter}}">
+            <StackPanel Orientation="Vertical">
+                <StackPanel Orientation="Horizontal">
+                    <TextBlock Text="主题：" lang:LanguageManager.LangText="主题：" VerticalAlignment="Center"></TextBlock>
+                    <ComboBox MinWidth="120" Height="25" VerticalContentAlignment="Center" ItemsSource="{Binding ThemeList}" SelectedItem="{Binding CurrentTheme}" DisplayMemberPath="ThemeDescription" Style="{StaticResource CommonComboBoxStyle}"></ComboBox>
+                </StackPanel>
             </StackPanel>
         </StackPanel>
     </Grid>
