--- a/PackageEasy/PackageEasy/Themes/Black.xaml
+++ b/PackageEasy/PackageEasy/Themes/Black.xaml
@@ -1,14 +1,17 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
     <!--基础颜色-->
-    <SolidColorBrush x:Key="menuOverBrush" Color="#B1C5FF"></SolidColorBrush>
-    <SolidColorBrush x:Key="menuBackBrush" Color="#E9EEFF"></SolidColorBrush>
-    <SolidColorBrush x:Key="menuLineStep" Color="#C0CAE9"></SolidColorBrush>
+    <SolidColorBrush x:Key="menuOverBrush" Color="#3D3D3D"></SolidColorBrush>
+    <SolidColorBrush x:Key="menuBackBrush" Color="#2E2E2E"></SolidColorBrush>
+    <SolidColorBrush x:Key="menuLineStep" Color="#3D3D3D"></SolidColorBrush>
     <SolidColorBrush x:Key="borderBrush" Color="LightGray"></SolidColorBrush>
-    <SolidColorBrush x:Key="MainWorkAreaBackgroud" Color="White"></SolidColorBrush>
+    <SolidColorBrush x:Key="MainWorkAreaBackgroud" Color="#3D3D3D"></SolidColorBrush>
     <SolidColorBrush x:Key="MainWindowBorderBrush" Color="#FFA49F9F"></SolidColorBrush>
     <SolidColorBrush x:Key="menuOverBorderBrush" Color="Black"></SolidColorBrush>
+    <SolidColorBrush x:Key="menuBorderBrush" Color="#424242"></SolidColorBrush>
+    <SolidColorBrush x:Key="menuDisabledForground" Color="#5C5C5C"></SolidColorBrush>
     <SolidColorBrush x:Key="watingBackground" Color="LightGray"></SolidColorBrush>
+    <SolidColorBrush x:Key="mainForeground" Color="White"></SolidColorBrush>
     <!--button-->
     <SolidColorBrush x:Key="CommonButtonBackgroundBrush" Color="White"></SolidColorBrush>
     <SolidColorBrush x:Key="CommonButtonBorderBrush" Color="LightGray"></SolidColorBrush>
@@ -58,7 +61,7 @@
     <!--下拉框颜色-->
     <SolidColorBrush x:Key="dropComboxArrowBackground" Color="#CCD5F0"></SolidColorBrush>
     <!--ShowWindow颜色-->
-    <SolidColorBrush x:Key="showWindowsBottonBackground" Color="#F0F0F0"></SolidColorBrush>
+    <SolidColorBrush x:Key="showWindowsBottonBackground" Color="#3D3D3D"></SolidColorBrush>
     <!--SettingControl-->
     <SolidColorBrush x:Key="settingControlBottonBackground" Color="#5D6B99"></SolidColorBrush>
     <!--插件鼠标移上颜色-->
