--- a/PackageEasy/PackageEasy/Views/Dialogs/Wating.xaml
+++ b/PackageEasy/PackageEasy/Views/Dialogs/Wating.xaml
@@ -6,9 +6,15 @@
         xmlns:local="clr-namespace:PackageEasy.Views.Dialogs"
         xmlns:controls="https://dicgo.com/controls"
         mc:Ignorable="d"
-        Title="Wating" Height="450" Background="Transparent" ShowInTaskbar="False" Width="800" WindowStyle="None" WindowStartupLocation="CenterOwner" AllowsTransparency="True">
-    <Grid Background="Transparent">
-        <Border Background="{DynamicResource watingBackground}" Opacity="0.5"></Border>
-        <controls:TProgressRing Style="{StaticResource CircleProgressRingStyle}" Width="80" Height="80"  IsActive="True"></controls:TProgressRing>
+        Title="Wating" Height="450" Background="Transparent" IsHitTestVisible="False" ShowInTaskbar="False" Width="800" WindowStyle="None" WindowStartupLocation="CenterOwner" AllowsTransparency="True">
+  
+    <Grid Background="Transparent" IsHitTestVisible="true" PreviewMouseLeftButtonDown="Grid_PreviewMouseLeftButtonDown">
+        <Border  Background="{DynamicResource watingBackground}" Opacity="0.1"></Border>
+        <Border Background="{DynamicResource watingBackground}" BorderBrush="{DynamicResource progressColoBrush}" BorderThickness="1"  Width="150" Height="80">
+            <StackPanel Orientation="Horizontal">
+                <controls:TProgressRing Style="{StaticResource CircleProgressRingStyle}" Margin="5,0,0,0" HorizontalAlignment="Left" Width="60" Height="60"  IsActive="True"></controls:TProgressRing>
+                <TextBlock Margin="5,0,0,0" Text="请稍等..." VerticalAlignment="Center" HorizontalAlignment="Center" ></TextBlock>
+            </StackPanel>
+        </Border>
     </Grid>
 </Window>
