--- a/PackageEasy/PackageEasy/Views/AssemblyView.xaml
+++ b/PackageEasy/PackageEasy/Views/AssemblyView.xaml
@@ -12,7 +12,7 @@
 
     <Grid>
         <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="0.8*"></ColumnDefinition>
+            <ColumnDefinition Width="0.5*"></ColumnDefinition>
             <ColumnDefinition></ColumnDefinition>
         </Grid.ColumnDefinitions>
         <Grid.RowDefinitions>
@@ -105,7 +105,7 @@
                 </StackPanel>
             </StackPanel>
         </Border>
-        <DataGrid Grid.Column="1" Margin="10,10,10,0" SelectionMode="Single" Style="{StaticResource DataGridStyle}" HorizontalScrollBarVisibility="Auto" ItemsSource="{Binding FileList,Mode=TwoWay,UpdateSourceTrigger=PropertyChanged}" BorderBrush="{DynamicResource borderBrush}"  CanUserAddRows="False"  AutoGenerateColumns="False" ColumnHeaderHeight="35" RowHeight="35">
+        <DataGrid Grid.Column="1" Margin="10,10,10,0" SelectionMode="Single" HorizontalScrollBarVisibility="Auto" Style="{StaticResource DataGridStyle}"  ItemsSource="{Binding FileList,Mode=TwoWay,UpdateSourceTrigger=PropertyChanged}" BorderBrush="{DynamicResource borderBrush}"  CanUserAddRows="False"  AutoGenerateColumns="False" ColumnHeaderHeight="35" RowHeight="35">
 
             <DataGrid.Columns>
                 <DataGridTemplateColumn  Width="72">
@@ -124,7 +124,7 @@
                 <DataGridTemplateColumn  Width="*">
                     <DataGridTemplateColumn.HeaderTemplate>
                         <DataTemplate>
-                            <TextBlock Text="文件" Foreground="{DynamicResource DataGridForeground}" lang:LanguageManager.LangText="文件" FontSize="14"></TextBlock>
+                            <TextBlock Text="文件目录" Foreground="{DynamicResource DataGridForeground}" lang:LanguageManager.LangText="文件目录" FontSize="14"></TextBlock>
                         </DataTemplate>
                     </DataGridTemplateColumn.HeaderTemplate>
                     <DataGridTemplateColumn.CellTemplate>
@@ -181,9 +181,9 @@
                     <DataGridTemplateColumn.CellTemplate>
                         <DataTemplate>
                             <StackPanel Orientation="Horizontal">
-                                <StackPanel IsEnabled="{Binding IsExe,Mode=OneWay,UpdateSourceTrigger=PropertyChanged}" Orientation="Horizontal" HorizontalAlignment="Center">
+                                <StackPanel IsEnabled="{Binding IsExe,Mode=OneWay,UpdateSourceTrigger=PropertyChanged}" Orientation="Vertical" VerticalAlignment="Center" HorizontalAlignment="Center" Margin="5,0,0,0">
                                     <CheckBox IsChecked="{Binding IsNeedInstall,Mode=TwoWay,UpdateSourceTrigger=PropertyChanged}"  VerticalContentAlignment="Center" HorizontalContentAlignment="Left"  Content="安装" lang:LanguageManager.LangText="安装"></CheckBox>
-                                    <CheckBox IsChecked="{Binding IsNeedQuietInstall,Mode=TwoWay,UpdateSourceTrigger=PropertyChanged}" VerticalContentAlignment="Center" HorizontalContentAlignment="Left" Margin="5,0,0,0" Content="静默安装" lang:LanguageManager.LangText="静默安装"></CheckBox>
+                                    <CheckBox IsChecked="{Binding IsNeedQuietInstall,Mode=TwoWay,UpdateSourceTrigger=PropertyChanged}" VerticalContentAlignment="Center" HorizontalContentAlignment="Left"  Content="静默安装" lang:LanguageManager.LangText="静默安装"></CheckBox>
                                 </StackPanel>
                             </StackPanel>
                         </DataTemplate>
@@ -211,9 +211,10 @@
         <Border Grid.Row="1" Grid.Column="1" BorderBrush="{DynamicResource borderBrush}"  Margin="10,5,10,5" BorderThickness="0.5,0.5,0.5,0.5">
             <StackPanel Orientation="Vertical" Margin="10,5,0,5">
                 <StackPanel Grid.Row="1" Orientation="Horizontal" VerticalAlignment="Top" HorizontalAlignment="Left" Margin="0,5,0,5">
-                    <Button Width="80" Height="30" Content="添加文件" Command="{Binding AddFileCommand}" lang:LanguageManager.LangText="添加文件" Style="{StaticResource CommonButtonStyle}"></Button>
-                    <Button Width="80" Height="30" Content="添加文件夹" Command="{Binding AddDirCommand}" Margin="5,0,0,0" lang:LanguageManager.LangText="添加文件夹" Style="{StaticResource CommonButtonStyle}"></Button>
-                    <Button Width="80" Height="30" Content="删除文件" Command="{Binding DeletedCommand}" lang:LanguageManager.LangText="删除文件" Margin="10,0,0,0" Style="{StaticResource CommonButtonStyle}"></Button>
+                    <Button MinWidth="80" Height="30" Content="添加单个文件" Command="{Binding AddFileCommand}" lang:LanguageManager.LangText="添加单个文件" Style="{StaticResource CommonButtonStyle}"></Button>
+                    <Button MinWidth="80" Height="30" Content="添加多个文件" Command="{Binding AddFileByDirCommand}" Margin="5,0,0,0" lang:LanguageManager.LangText="添加多个文件" Style="{StaticResource CommonButtonStyle}"></Button>
+                    <Button MinWidth="80" Height="30" Content="添加文件夹" Command="{Binding AddDirCommand}" Margin="5,0,0,0" lang:LanguageManager.LangText="添加文件夹" Style="{StaticResource CommonButtonStyle}"></Button>
+                    <Button MinWidth="80" Height="30" Content="删除" Command="{Binding DeletedCommand}" lang:LanguageManager.LangText="删除" Margin="10,0,0,0" Style="{StaticResource CommonButtonStyle}"></Button>
                 </StackPanel>
             </StackPanel>
         </Border>
